--- a/popsicle/style.css
+++ b/popsicle/style.css
@@ -8,9 +8,10 @@ body {
     width: 100vw;
     height: 100vh;
     display: flex;
-    background-color: #ffd9e1;
+    background-color: #FFFFFF;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .popsicle-content {
@@ -21,9 +22,9 @@ body {
 }
 
 .popsicle {
-    width: 15rem;
-    height: 25rem;
-    background-color: #44DAE3;
+    width: 10rem;
+    height: 15rem;
+    background-color: #FFAFA6;
     border-radius: 4rem 4rem 1.5rem 1.6rem;
     display: flex;
     justify-content: center;
@@ -36,16 +37,113 @@ body {
     width: 80%;
     height: 95%;
     box-shadow: -10px 0 rgba(255, 255, 255, 0.568);
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
 }
 
+.eyes {
+    height: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    gap: 5rem;
+    margin-bottom: 1rem;
+    animation-duration: 10s;
+    animation-name: move-face-left;
+    animation-iteration-count: infinite;
+}
+
+
+.eye {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #F09990;
+    animation-duration: 5s;
+    animation-name: eyes-moves;
+    animation-iteration-count: infinite;
+}
+
+
+@keyframes move-face-left {
+
+    0% {
+        margin-left: 0px;
+    }
+
+    10% {
+        margin-left: 0px;
+    }
+
+    15% {
+        margin-left: 30px;
+    }
+
+    90% {
+        margin-left: 30px;
+    }
+
+    100% {
+        margin-left: 0px;
+    }
+}
+
+@keyframes eyes-moves {
+    0% {
+        height: 20px;
+    }
+
+    48% {
+        height: 20px;
+    }
+
+    49% {
+        height: 5px;
+    }
+
+    50% {
+        height: 20px;
+    }
+
+    52% {
+        height: 5px;
+    }
+
+    53% {
+        height: 20px;
+    }
+
+    100% {
+        height: 20px;
+    }
+}
+
+.mouth {
+    height: 30%;
+    border-radius: 100%;
+    
+    margin-bottom: 20px;
+    width: 60px;
+    height: 20px;
+    border-bottom: 6px solid #F09990;
+
+    animation-duration: 10s;
+    animation-name: move-face-left;
+    animation-iteration-count: infinite;
+}
+
+
 .popsicle-shadow {
-    background-color: #f5c19a;
-    width: 50px;
+    background-color: #F0CCA5;
+    width: 40px;
     height: 1.3rem;
 }
 
 .pick {
-    background-color: #FFE4CF;
-    width: 50px;
-    height: 4.5rem;
+    background-color: #FCD6AD;
+    width: 40px;
+    height: 3rem;
+    border-radius: 0 0 1rem 1rem;
 }
